HYDRAN-195: Removed response code from documentation
- Removed documentation regarding response code that no longer is
returned from resource
