# src/main/java/se/sundsvall/messagingsettings/api/MessagingSettingsResource.java
@@ -52,8 +52,7 @@ class MessagingSettingsResource {
 
 	@GetMapping(path = "/sender-info", produces = APPLICATION_JSON_VALUE)
 	@Operation(summary = "Get sender info", description = "Get sender info, optionally filtered by any combination of department id, department name and namespace.", responses = {
-		@ApiResponse(responseCode = "200", description = "OK", useReturnTypeSchema = true),
-		@ApiResponse(responseCode = "404", description = "Not Found", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
+		@ApiResponse(responseCode = "200", description = "OK", useReturnTypeSchema = true)
 	})
 	ResponseEntity<List<SenderInfoResponse>> getSenderInfo(
 		@Parameter(name = "municipalityId", description = "Municipality ID", example = "2281") @ValidMunicipalityId @PathVariable final String municipalityId,
@@ -67,7 +66,7 @@ class MessagingSettingsResource {
 	@GetMapping(path = "/{departmentId}/callback-email", produces = APPLICATION_JSON_VALUE)
 	@Operation(summary = "Get callback email", description = "Get callback e-mail for given department and municipality.", responses = {
 		@ApiResponse(responseCode = "200", description = "OK", useReturnTypeSchema = true),
-		@ApiResponse(responseCode = "404", description = "Not Found", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
+		@ApiResponse(responseCode = "404", description = "Not Found", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class)))
 	})
 	ResponseEntity<CallbackEmailResponse> getCallbackEmail(
 		@Parameter(name = "municipalityId", description = "Municipality ID", example = "2281") @ValidMunicipalityId @PathVariable(name = "municipalityId") final String municipalityId,
@@ -78,7 +77,7 @@ class MessagingSettingsResource {
 	@GetMapping(path = "/portal-settings", produces = APPLICATION_JSON_VALUE)
 	@Operation(summary = "Get portal settings", description = "Get portal settings for given department.", responses = {
 		@ApiResponse(responseCode = "200", description = "OK", useReturnTypeSchema = true),
-		@ApiResponse(responseCode = "404", description = "Not Found", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
+		@ApiResponse(responseCode = "404", description = "Not Found", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class)))
 	})
 	ResponseEntity<PortalSettingsResponse> getPortalSettings(
 		@Parameter(name = "municipalityId", description = "Municipality ID", example = "2281") @ValidMunicipalityId @PathVariable(name = "municipalityId") final String municipalityId) {
